--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j -->
+        <dependency><groupId>org.apache.logging.log4j</groupId><artifactId>log4j</artifactId><version>2.12.0</version></dependency>
+
+    </dependencies>
 
 
 </project>
